# TimeEvolutionQuantComputing

./: .gitignore  README.md  pyproject.toml
GroupProject/time_evolution/: __init__.py  project_pipeline.py  spin_chain.py  suzuki_trotter_algorithm.py
tests/: test_spin_chain.py
