[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-evolution-quant-computing"
version = "0.1.0"
description = "Quantum spin-chain time-evolution simulation using exact diagonalisation and Trotterisation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
run-time-evolution = "GroupProject.run_time_evolution_project:main"

[tool.setuptools.packages.find]
include = ["GroupProject*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
